# aether

./: .bazelrc  .clangd  .editorconfig  .gitignore  BACKLOG.md  BUILD.bazel  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.bazel  Makefile  README.md  cc_toolchain_config.bzl  common.mk  discover_bazel_c_compile_commands.py  discover_bazel_rust_project.sh  internal_extensions.bzl  limine.conf  package.mk  run_qemu.sh  transitions.bzl
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.zed/: debug.json  settings.json  tasks.json
boot/: package.mk
boot/limine/: limine.conf
docs/: architecture.md  building.md  development.md  hardware-interrupts.md  syscalls.md
docs/kernel/: init_contract.md
hello_world/: BUILD.bazel  Cargo.toml  build.mk  main.c  package.mk
hello_world/src/: main.rs
image/: BUILD.bazel  image.mk  img.mk  initrd.mk  iso.mk  pkg.mk
image/img/: BUILD.bazel
image/initrd/: BUILD.bazel  initrd.mk
image/iso/: BUILD.bazel
image/pkg/: BUILD.bazel  pkg.mk
image/pkg/EFI/BOOT/: BUILD.bazel
image/pkg/boot/: BUILD.bazel
image/pkg/boot/limine/: BUILD.bazel
include/: BUILD.bazel  syscall_list.h  syscalls_dummy.c
init/: BUILD.bazel  Cargo.toml  Makefile  build.mk  build.rs  module.mk  package.mk
init/include/: elf.h  tar.h
init/src/: elf_loading.rs  elf_parsing.rs  entry.c  entry.rs  io.x86_64.h  keyboard.aarch64.c  keyboard.x86_64.c  keyboard_priv.x86_64.h  keyboard_scancodes.x86_64.c  main.c  main.rs  serial.aarch64.c  serial.h  serial.x86_64.c  syscalls.h  tar.c  tarball_parsing.rs
init/src/drivers/keyboard/aarch64/: keyboard.c
init/src/drivers/keyboard/x86_64/: keyboard.c  keyboard_scancodes.c
init/src/drivers/serial/aarch64/: serial.c
init/src/drivers/serial/x86_64/: serial.c
kernel/: BUILD.bazel  Cargo.toml  Makefile  build.mk  build.rs  module.mk  package.mk  rust-toolchain.toml
kernel/.cargo/: config.toml
kernel/api/init/: BUILD.bazel  Cargo.toml  boot_info.h  build.rs  init_dummy.c
kernel/api/syscalls/: BUILD.bazel  build.rs  compat_generator.py  errors.toml  syscall_errs.h  syscall_nums.h  syscall_parser.py  syscall_user.h  syscalls.toml
kernel/core/: BUILD.bazel  Cargo.toml  Makefile  build.rs  module.mk  platform_wrapper.h  syscalls_wrapper.h
kernel/core/src/: allocator.rs  args.rs  boot.rs  elf.rs  elf_loading.rs  elf_parsing.rs  entrypoint.rs  init_process.rs  interrupt_safe_spin_lock.rs  lib.rs  logging.rs  scheduler.rs  spin_lock.rs  tarball_parsing.rs  task_id.rs  task_registry.rs  ticker.rs
kernel/core/src/platform/: early_console.rs  emergency_console.rs  interrupts.rs  mod.rs  modules.rs  physical_memory_manager.rs  physical_page_frame.rs  platform.rs  syscalls.rs  tasks.rs  terminal.rs  virtual_address.rs  virtual_address_allocator.rs  virtual_memory_manager.rs  virtual_memory_manager_context.rs  virtual_page_address.rs
kernel/core/src/self_tests/: interrupts.rs  memory.rs  mod.rs
kernel/core/src/syscall_handler/: mod.rs  sys_exit.rs  sys_irq_unmask.rs  sys_irq_wait.rs  sys_mmap_dev.rs  sys_proc_create.rs  sys_proc_mmap.rs  sys_proc_mprot.rs  sys_proc_munmap.rs  sys_proc_spawn.rs  sys_write.rs  user_ptr.rs  user_slice.rs
kernel/entry/: BUILD.bazel  Cargo.toml  build.rs  kernel.aarch64.ld  kernel.x86_64.ld  transitions.bzl
kernel/entry/src/: early_allocator.rs  early_heap.rs  global_allocator.rs  main.rs  proxy_allocator.rs  start.rs
kernel/hal/: BUILD.bazel  Cargo.toml
kernel/hal/src/: cpu.rs  early_console.rs  emergency_console.rs  interrupts.rs  lib.rs  mmu.rs  syscalls.rs  tasks.rs  timer.rs
kernel/hal/src/arch/: mod.rs
kernel/hal/src/arch/aarch64/: cpu.rs  cpu_local.rs  early_console.rs  emergency_console.rs  gic.rs  interrupts.rs  mmu.rs  mod.rs  platform.rs  syscalls.rs  tasks.rs  timer.rs
kernel/hal/src/arch/x86_64/: acpi.rs  cpu.rs  early_console.rs  emergency_console.rs  gdt.rs  interrupts.rs  io_wrapper.rs  ioapic.rs  lapic.rs  mmu.rs  mod.rs  msr.rs  platform.rs  syscalls.rs  tasks.rs  timer.rs
kernel/platform/: BUILD.bazel  Cargo.toml  Makefile  build.rs  module.mk  platform_wrapper.h
kernel/platform/include/: boot.h  early_console.h  emergency_console.h  interrupts.h  physical_memory_manager.h  platform.h  virtual_address_allocator.h  virtual_memory_manager.h
kernel/platform/src/: boot.c  physical_memory_manager.c
kernel/platform/src/arch/aarch64/: early_console.c  emergency_console.c  gic.c  gic.h  interrupts.c  platform.c  tasks.c  vectors.S  virtual_memory_manager.c
kernel/platform/src/arch/x86_64/: acpi.c  early_console.c  emergency_console.c  gdt.h  interrupts.c  io_wrapper.h  ioapic.c  ioapic.h  msr.c  msr.h  platform.c  syscall_entry.S
kernel/src/: init_process.rs  logging.rs  main.rs  scheduler.rs  syscall_handler.rs  ticker.rs
kernel/src/platform/: interrupts.rs  mod.rs  syscalls.rs  tasks.rs  ticker.rs  timer.rs
kernel/src/platform/drivers/: serial.rs
kernel/src/syscall_handler/: mod.rs  sys_clone.rs  sys_exit.rs  sys_mmap.rs  sys_mmap_dev.rs  sys_write.rs
kernel/syscalls/: BUILD.bazel  Cargo.toml  build.rs  syscall_kernel_gen.py
libs/: package.mk
libs/aether_rt/: BUILD.bazel  Cargo.toml
libs/aether_rt/src/: allocator.rs  lib.rs  panic.rs  process.rs  stack_allocator.rs  start.rs
libs/aether_sys/: BUILD.bazel  Cargo.toml  build.rs  lib.rs  syscall_aether_sys_gen.py
libs/libsyscall/: BUILD.bazel  build.mk  package.mk  syscall_c_stubs.py  syscalls.h
mk/: compile_commands.json.mk  qemu.mk  rust-project.json.mk
platform/include/: early_console.h  interrupts.h  syscalls.h  tasks.h
platform/src/: boot.c
platform/src/arch/aarch64/: cpu_local.c  cpu_local.h  emergency_console.c  interrupts.c  syscalls.c
platform/src/arch/x86_64/: cpu_interrupts.h  emergency_console.c  gdt.c  interrupts.c  msr.c  msr.h  platform.c  syscall_entry.asm  syscalls.c  tasks.c
toolchain/: BUILD.bazel  cc_toolchain_config.bzl
tooling/qemu/: BUILD.bazel  run_qemu.sh
tooling/sync_ide/: BUILD.bazel  discover_bazel_c_compile_commands.py  discover_bazel_rust_project.sh  run_sync.sh
(+1 files in other folders)
