load("@bazel_skylib//rules:native_binary.bzl", "native_binary")
load("@rules_cc//cc:defs.bzl", "cc_import", "cc_toolchain", "cc_toolchain_suite")
load("@rules_rust//rust:toolchain.bzl", "rust_toolchain")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load(":transitions.bzl", "platform_binary_wrapper")

package(default_visibility = ["//visibility:public"])

exports_files([
    "BUILD.freestnd-c-hdrs",
    "BUILD.limine-protocol",
])

cc_toolchain_config(
    name = "x86_64_kernel_config",
    ar = "@llvm_toolchain_llvm//:bin/llvm-ar",
    cpu = "x86_64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
    gcc = "@llvm_toolchain_llvm//:bin/clang",
    ld = "@llvm_toolchain_llvm//:bin/ld.lld",
    nm = "@llvm_toolchain_llvm//:bin/llvm-nm",
    objcopy = "@llvm_toolchain_llvm//:bin/llvm-objcopy",
    objdump = "@llvm_toolchain_llvm//:bin/llvm-objdump",
    strip = "@llvm_toolchain_llvm//:bin/llvm-strip",
)

cc_toolchain_config(
    name = "aarch64_kernel_config",
    ar = "@llvm_toolchain_llvm//:bin/llvm-ar",
    cpu = "aarch64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
    gcc = "@llvm_toolchain_llvm//:bin/clang",
    ld = "@llvm_toolchain_llvm//:bin/ld.lld",
    nm = "@llvm_toolchain_llvm//:bin/llvm-nm",
    objcopy = "@llvm_toolchain_llvm//:bin/llvm-objcopy",
    objdump = "@llvm_toolchain_llvm//:bin/llvm-objdump",
    strip = "@llvm_toolchain_llvm//:bin/llvm-strip",
)

cc_toolchain_config(
    name = "x86_64_user_config",
    ar = "@llvm_toolchain_llvm//:bin/llvm-ar",
    cpu = "x86_64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
    gcc = "@llvm_toolchain_llvm//:bin/clang",
    ld = "@llvm_toolchain_llvm//:bin/ld.lld",
    nm = "@llvm_toolchain_llvm//:bin/llvm-nm",
    objcopy = "@llvm_toolchain_llvm//:bin/llvm-objcopy",
    objdump = "@llvm_toolchain_llvm//:bin/llvm-objdump",
    strip = "@llvm_toolchain_llvm//:bin/llvm-strip",
)

cc_toolchain_config(
    name = "aarch64_user_config",
    ar = "@llvm_toolchain_llvm//:bin/llvm-ar",
    cpu = "aarch64",
    cxx_builtin_include_directories = "@llvm_toolchain_llvm//:cxx_builtin_include",
    gcc = "@llvm_toolchain_llvm//:bin/clang",
    ld = "@llvm_toolchain_llvm//:bin/ld.lld",
    nm = "@llvm_toolchain_llvm//:bin/llvm-nm",
    objcopy = "@llvm_toolchain_llvm//:bin/llvm-objcopy",
    objdump = "@llvm_toolchain_llvm//:bin/llvm-objdump",
    strip = "@llvm_toolchain_llvm//:bin/llvm-strip",
)

filegroup(
    name = "llvm_all",
    srcs = [
        "@llvm_toolchain_llvm//:bin",
        "@llvm_toolchain_llvm//:include",
        "@llvm_toolchain_llvm//:lib",
    ],
)

cc_toolchain(
    name = "cc_toolchain_x86_64_kernel",
    all_files = ":llvm_all",
    ar_files = ":llvm_all",
    as_files = ":llvm_all",
    compiler_files = ":llvm_all",
    dwp_files = ":llvm_all",
    linker_files = ":llvm_all",
    objcopy_files = ":llvm_all",
    strip_files = ":llvm_all",
    supports_param_files = 0,
    toolchain_config = ":x86_64_kernel_config",
    toolchain_identifier = "kernel-x86_64",
)

cc_toolchain(
    name = "cc_toolchain_aarch64_kernel",
    all_files = ":llvm_all",
    ar_files = ":llvm_all",
    as_files = ":llvm_all",
    compiler_files = ":llvm_all",
    dwp_files = ":llvm_all",
    linker_files = ":llvm_all",
    objcopy_files = ":llvm_all",
    strip_files = ":llvm_all",
    supports_param_files = 0,
    toolchain_config = ":aarch64_kernel_config",
    toolchain_identifier = "kernel-aarch64",
)

cc_toolchain(
    name = "cc_toolchain_x86_64_user",
    all_files = ":llvm_all",
    ar_files = ":llvm_all",
    as_files = ":llvm_all",
    compiler_files = ":llvm_all",
    dwp_files = ":llvm_all",
    linker_files = ":llvm_all",
    objcopy_files = ":llvm_all",
    strip_files = ":llvm_all",
    supports_param_files = 0,
    toolchain_config = ":x86_64_user_config",
    toolchain_identifier = "user-x86_64",
)

cc_toolchain(
    name = "cc_toolchain_aarch64_user",
    all_files = ":llvm_all",
    ar_files = ":llvm_all",
    as_files = ":llvm_all",
    compiler_files = ":llvm_all",
    dwp_files = ":llvm_all",
    linker_files = ":llvm_all",
    objcopy_files = ":llvm_all",
    strip_files = ":llvm_all",
    supports_param_files = 0,
    toolchain_config = ":aarch64_user_config",
    toolchain_identifier = "user-aarch64",
)

toolchain(
    name = "x86_64_kernel_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:kernel_mode",
    ],
    toolchain = ":cc_toolchain_x86_64_kernel",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "aarch64_kernel_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:kernel_mode",
    ],
    toolchain = ":cc_toolchain_aarch64_kernel",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "x86_64_user_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:user_mode",
    ],
    toolchain = ":cc_toolchain_x86_64_user",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

toolchain(
    name = "aarch64_user_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:user_mode",
    ],
    toolchain = ":cc_toolchain_aarch64_user",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

rust_toolchain(
    name = "rust_toolchain_x86_64_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "aarch64-apple-darwin",
    rust_doc = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rustdoc",
    # The target name usually includes the triple suffix
    rust_std = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rust_std-x86_64-unknown-none",
    rustc = "@rust_macos_aarch64__x86_64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "x86_64-unknown-none",
)

rust_toolchain(
    name = "rust_toolchain_aarch64_impl",
    binary_ext = "",
    dylib_ext = ".so",
    exec_triple = "aarch64-apple-darwin",
    rust_doc = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rustdoc",
    rust_std = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rust_std-aarch64-unknown-none",
    rustc = "@rust_macos_aarch64__aarch64-unknown-none__stable_tools//:rustc",
    staticlib_ext = ".a",
    stdlib_linkflags = [],
    target_triple = "aarch64-unknown-none",
)

toolchain(
    name = "x86_64_kernel_toolchain_rust",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
        "//platforms:kernel_mode",
        "@platforms//os:none",
    ],
    toolchain = ":rust_toolchain_x86_64_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

toolchain(
    name = "aarch64_kernel_toolchain_rust",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "//platforms:kernel_mode",
        "@platforms//os:uefi",
    ],
    toolchain = ":rust_toolchain_aarch64_impl",
    toolchain_type = "@rules_rust//rust:toolchain_type",
)

native_binary(
    name = "clang",
    src = "@llvm_toolchain_llvm//:bin/clang",
)

cc_import(
    name = "libclang_import",
    shared_library = "@llvm_toolchain_llvm//:libclang",
)

rust_bindgen_toolchain(
    name = "bindgen_toolchain_impl",
    bindgen = "@crates//:bindgen-cli__bindgen",
    clang = ":clang",
    libclang = ":libclang_import",
)

toolchain(
    name = "bindgen_toolchain",
    toolchain = ":bindgen_toolchain_impl",
    toolchain_type = "@rules_rust_bindgen//:toolchain_type",
)

platform_binary_wrapper(
    name = "init_elf",
    target = "//init:init",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
)

genrule(
    name = "kernel_iso",
    srcs = [
        "//kernel:kernel",
        ":init_elf",
        "@limine-bootloader//:boot_artifacts",
        "limine.conf",
        "Mik_8x16.psf",
    ],
    target_compatible_with = [
        "@platforms//cpu:x86_64",
    ],
    outs = ["kernel.iso"],
    cmd = """
    mkdir -p staging/boot/limine/
    cp $(location //kernel:kernel) staging/boot/kernel.elf
    cp $(location :init_elf) staging/boot/init.elf
    cp $(location :Mik_8x16.psf) staging/boot/kernel-font.psf

    # Grab all boot artifacts from the filegroup
    cp $(locations @limine-bootloader//:boot_artifacts) staging/boot/limine/
    cp $(location limine.conf) staging/boot/limine/

    xorriso -as mkisofs -R -r -J -b boot/limine/limine-bios-cd.bin \
		-no-emul-boot -boot-load-size 4 -boot-info-table -hfsplus \
		-apm-block-size 2048 --efi-boot boot/limine/limine-uefi-cd.bin \
		-efi-boot-part --efi-boot-image --protective-msdos-label \
		staging/ -o $@
    
    $(location @limine-bootloader//:limine_tool) bios-install $@
    """,
    tools = ["@limine-bootloader//:limine_tool"],
)
