load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

package(default_visibility = ["//visibility:public"])

exports_files([
    "BUILD.freestnd-c-hdrs",
    "BUILD.limine-protocol",
])

sh_binary(
    name = "qemu",
    srcs = ["run_qemu.sh"],
    args = select({
        "@platforms//cpu:x86_64": [
            "$(location //image/iso)",
            "x86_64",
            "-",
        ],
        "@platforms//cpu:aarch64": [
            "$(location //image/img)",
            "aarch64",
            "$(location @qemu//:edk2-aarch64-code)",
        ],
    }) + ["NODEBUG"],
    data = select({
        "@platforms//cpu:x86_64": ["//image/iso"],
        "@platforms//cpu:aarch64": [
            "//image/img",
            "@qemu//:edk2-aarch64-code",
        ],
    }),
)

sh_binary(
    name = "qemu-debug",
    srcs = ["run_qemu.sh"],
    args = select({
        "@platforms//cpu:x86_64": [
            "$(location //image/iso)",
            "x86_64",
            "-",
        ],
        "@platforms//cpu:aarch64": [
            "$(location //image/img)",
            "aarch64",
            "$(location @qemu//:edk2-aarch64-code)",
        ],
    }) + ["DEBUG"],
    data = select({
        "@platforms//cpu:x86_64": ["//image/iso"],
        "@platforms//cpu:aarch64": [
            "//image/img",
            "@qemu//:edk2-aarch64-code",
        ],
    }),
)
