alias(
    name = "qemu",
    actual = "//tooling/qemu:run",
    visibility = ["//visibility:public"],
)

alias(
    name = "qemu-debug",
    actual = "//tooling/qemu:debug",
    visibility = ["//visibility:public"],
)

exports_files(
    [
        "BUILD.freestnd-c-hdrs",
        "BUILD.limine-protocol",
    ],
    visibility = ["//visibility:public"],
)
