module(
    name = "aether",
    version = "0.1.0",
)

# Pull in the CC rules
bazel_dep(name = "rules_cc", version = "0.2.14")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Pull in standard platform definitions (x86_64, aarch64, etc.)
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "toolchains_llvm", version = "1.6.0")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_rust_bindgen", version = "0.69.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_shell", version = "0.6.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_target_triples = [
        "x86_64-unknown-none",
        "aarch64-unknown-none",
        "aarch64-unknown-uefi",
    ],
    versions = ["1.94.0"],
)
use_repo(
    rust,
    "rust_linux_x86_64__aarch64-unknown-none__stable_tools",
    "rust_linux_x86_64__aarch64-unknown-uefi__stable_tools",
    "rust_linux_x86_64__x86_64-unknown-none__stable_tools",
    "rust_macos_aarch64__aarch64-unknown-none__stable_tools",
    "rust_macos_aarch64__aarch64-unknown-uefi__stable_tools",
    "rust_macos_aarch64__x86_64-unknown-none__stable_tools",
    "rust_toolchains",
)

rust_host_tools = use_extension("@rules_rust//rust:extensions.bzl", "rust_host_tools")
rust_host_tools.host_tools(
    name = "rust_host_tools_nightly",
    version = "nightly",
)
use_repo(rust_host_tools, "rust_host_tools_nightly")

crates_host = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crates_host.spec(
    artifact = "bin",
    package = "bindgen-cli",
    version = "=0.72.1",
)
crates_host.annotation(
    crate = "bindgen-cli",
    gen_all_binaries = True,
)
crates_host.from_specs(
    name = "crates_host",
    host_tools = "@rust_host_tools_nightly",
    supported_platform_triples = [
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
use_repo(crates_host, "crates_host")

crates = use_extension("@rules_rust//crate_universe:extension.bzl", "crate")
crates.spec(
    package = "bitflags",
    version = "2.11.0",
)
crates.spec(
    package = "eclipse_framebuffer",
    version = "0.1.0",
)
crates.spec(
    package = "limine",
    version = "0.5.0",
)
crates.spec(
    default_features = False,
    features = ["alloc"],
    package = "nom",
    version = "8.0.0",
)
crates.spec(
    default_features = False,
    features = ["alloc"],
    package = "memchr",
    version = "2.7.0",
)
crates.from_specs(
    name = "crates",
    host_tools = "@rust_host_tools_nightly",
    supported_platform_triples = [
        "x86_64-unknown-none",
        "aarch64-unknown-uefi",
        "aarch64-apple-darwin",
        "x86_64-unknown-linux-gnu",
    ],
)
crates.splicing_config(resolver_version = "3")
use_repo(crates, "crates")

third_party_deps = use_extension("//3rdparty:extensions.bzl", "third_party_deps")
use_repo(
    third_party_deps,
    "crate_index",
    "crate_index__bitflags-2.11.0",
    "crate_index__eclipse_framebuffer-0.1.0",
    "crate_index__limine-0.5.0",
    "crate_index__nom-8.0.0",
    "crate_index__thiserror-no-std-2.0.2",
    "freestnd_c_hdrs",
    "limine_bootloader",
    "limine_protocol",
    "qemu",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "19.1.1",
)
use_repo(llvm, "llvm_toolchain")
use_repo(llvm, "llvm_toolchain_llvm")  # if you depend on specific tools in scripts

register_toolchains("//toolchain:all")

register_toolchains("@llvm_toolchain_llvm//:all")

register_toolchains("@rust_toolchains//:all")
