load("//platforms:transitions.bzl", rust_binary = "user_rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world",
    srcs = [
        "src/main.rs",
    ],
    binary_name = "hello_world",
    edition = "2024",
    rustc_flags = [
        "-C",
        "link-arg=-Ttext=0x400000",
        "-C",
        "link-arg=-nostdlib",
        "-C",
        "link-arg=-static",
        "-C",
        "link-arg=-zmax-page-size=0x1000",
        "-C",
        "link-arg=--no-dynamic-linker",
        "-C",
        "link-arg=--gc-sections",
        "-C",
        "relocation-model=static",
        "-C",
        "target-feature=-reserve-x18",
        "-Wl,--undefined=_start",
    ],
    target_compatible_with = ["@//platforms:user_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:none",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "//libs/aether_rt",
    ],
)
