load("//platforms:transitions.bzl", rust_binary = "user_rust_binary")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "hello_world",
    srcs = [
        "src/main.rs",
    ],
    binary_name = "hello_world",
    edition = "2024",
    rustc_flags = [
        "-C",
        "link-arg=-Ttext=0x400000",
        "-C",
        "link-arg=-nostdlib",
        "-C",
        "link-arg=-static",
        "-C",
        "link-arg=-zmax-page-size=0x1000",
        "-C",
        "link-arg=--no-dynamic-linker",
        "-C",
        "link-arg=--gc-sections",
        "-C",
        "relocation-model=static",
        "-C",
        "target-feature=-reserve-x18",
        "-Wl,--undefined=_start",
        # "--target",
        # "$(location //platforms:aarch64-aether-user.json)",
        # "-Z",
        # "unstable-options",  # Enable the use of gnu-lld flavor
        # "-C",
        # "linker-flavor=gnu-lld",  # Force ELF behavior
        # "-C",
        # "link-arg=-flavor",  # Pass through to the wrapper
        # "-C",
        # "link-arg=gnu",  # Ensure it uses the GNU driver
    ],
    deps = [
        "//libs/aether_rt",
        "//libs/aether_sys",
    ],
)
