load("@rules_pkg//pkg:mappings.bzl", "pkg_files")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

pkg_files(
    name = "limine_bootloader",
    srcs = [
        "limine.conf",
        "@limine-bootloader//:boot_artifacts",
    ],
    prefix = "/boot/limine",
)

pkg_files(
    name = "efi_artifacts",
    srcs = [
        "@limine-bootloader//:boot_artifacts",
    ],
    prefix = "/EFI/BOOT",
)

pkg_files(
    name = "kernel_files",
    srcs = [
        "Mik_8x16.psf",
        "//image/initrd",
        "//image/initrd:init",
        "//kernel",
    ],
    prefix = "/boot",
)

pkg_tar(
    name = "aether_tar",
    srcs = [
        ":efi_artifacts",
        ":kernel_files",
        ":limine_bootloader",
    ],
    out = "aether.tar",
    mode = "0644",
    visibility = [":__subpackages__"],
)
