load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_static_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

cc_library(
    name = "syscalls",
    srcs = ["syscalls_dummy.c"] + glob(["*.h"]),
    hdrs = glob(["*.h"]),
    includes = ["."],
    target_compatible_with = select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }) + select({
        "//platforms:kernel_mode": ["//platforms:kernel_mode"],
        "//platforms:user_mode": ["//platforms:user_mode"],
    }),
    deps = ["@freestnd-c-hdrs//:freestnd-c-hdrs"],
    visibility = ["//visibility:public"],
)

rust_bindgen_library(
    name = "syscalls_rust",
    bindgen_flags = [
        "--rust-edition",
        "2024",
        "--rust-target",
        "1.94.0",
        "--use-core",
        "--raw-line",
        "#![no_std]",
        "--raw-line",
        "#![allow(non_upper_case_globals)]",
        "--raw-line",
        "#![allow(non_camel_case_types)]",
        "--raw-line",
        "#![allow(non_snake_case)]",
        "--rustified-enum",
        "syscall_err",
        "--constified-enum-module",
        "syscall_num",
    ],
    cc_lib = ":syscalls",
    clang_flags = [
        "-nostdinc",
        "-ffreestanding",
        "-Iexternal/+git_repository+freestnd-c-hdrs/include",
    ],
    edition = "2024",
    header = "syscall_defs.h",
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
)
