load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "init_c",
    srcs = glob(["src/*.c", "include/**/*.h", "src/*.h"]) + select({
        "@platforms//cpu:x86_64": glob(["src/drivers/*/x86_64/*.c", "src/drivers/*/x86_64/*.h"]),
        "@platforms//cpu:aarch64": glob(["src/drivers/*/aarch64/*.c", "src/drivers/*/aarch64/*.h"], allow_empty = True),
    }),
    includes = ["include", "src"],
    linkstatic = True,
    target_compatible_with = ["@//platforms:user_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:none",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "//libs/libsyscall",
        "//kernel/api/init:init_contract",
        "@freestnd-c-hdrs//:freestnd-c-hdrs",
    ],
)

rust_binary(
    name = "init",
    binary_name = "init",
    srcs = glob([
        "src/**/*.rs",
    ]),
    edition = "2024",
    rustc_flags = [
        "-C", "link-arg=-Ttext=0x400000",
        "-C", "link-arg=-nostdlib",
        "-C", "link-arg=-static",
        "-C", "link-arg=-zmax-page-size=0x1000",
        "-C", "link-arg=--no-dynamic-linker",
        "-C", "link-arg=--gc-sections",
        "-C", "relocation-model=static",
        "-C", "target-feature=-reserve-x18",
    ],
    target_compatible_with = ["@//platforms:user_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:none",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        ":init_c",
        "//kernel/api/init:init_contract_rust",
    ],
)
