load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("//platforms:transitions.bzl", rust_binary = "user_rust_binary")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "init_c",
    srcs = glob([
        "src/*.c",
        "include/**/*.h",
        "src/*.h",
    ]) + select({
        "@platforms//cpu:x86_64": glob([
            "src/drivers/*/x86_64/*.c",
            "src/drivers/*/x86_64/*.h",
        ]),
        "@platforms//cpu:aarch64": glob(
            [
                "src/drivers/*/aarch64/*.c",
                "src/drivers/*/aarch64/*.h",
            ],
            allow_empty = True,
        ),
    }),
    includes = [
        "include",
        "src",
    ],
    linkstatic = True,
    deps = [
        "//kernel/api/init:init_contract",
        "//libs/libsyscall",
        "@freestnd_c_hdrs",
    ],
)

rust_binary(
    name = "init",
    srcs = glob([
        "src/**/*.rs",
    ]),
    binary_name = "init",
    edition = "2024",
    rustc_flags = [
        "-C",
        "link-arg=-Ttext=0x400000",
        "-C",
        "link-arg=-nostdlib",
        "-C",
        "link-arg=-static",
        "-C",
        "link-arg=-zmax-page-size=0x1000",
        "-C",
        "link-arg=--no-dynamic-linker",
        "-C",
        "link-arg=--gc-sections",
        "-C",
        "relocation-model=static",
        "-C",
        "target-feature=-reserve-x18",
        "-C",
        "no-redzone",
        "-C",
        "link-arg=-entry=_entry",
        "-C",
        "link-arg=-z",
        "-C",
        "link-arg=defs",
        "-C",
        "link-arg=--no-undefined",
        "-C",
        "link-arg=-no-pie",  # Force the linker to NOT produce a Position Independent Executable
        "-C",
        "link-arg=-z",  # Pair with next line
        "-C",
        "link-arg=norelro",  # Disable "Read Only Relocations" which can hide GOT issues
        "-C",
        "link-arg=--no-relax",  # Prevent the linker from trying to "optimize" relocations into indirect ones
        "-C",
        "link-arg=-z",
        "-C",
        "link-arg=notext",
        "-C",
        "link-arg=-z",
        "-C",
        "link-arg=nmagic",  # Disable page alignment of segments
        "-C",
        "link-arg=-z",
        "-C",
        "link-arg=nodefaultlib",
        "-C",
        "target-feature=-sse,-sse2,-sse3,-ssse3,-sse4.1,-sse4.2,-mmx",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":init_c",
        "//kernel/api/init:init_contract_rust",
        "//libs/aether_rt",
        "//libs/aether_sys",
        "@nom",
    ],
)
