load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "kernel",
    features = ["kernel_compile_flags", "kernel_link_flags"],
    linkopts = [
        "-nostdlib",
        "-static",
        "-z max-page-size=0x1000",
        "--no-dynamic-linker",
        "--gc-sections",
    ] + select({
        "@platforms//cpu:aarch64": ["-T kernel/kernel.aarch64.ld"],
        "@platforms//cpu:x86_64": ["-T kernel/kernel.x86_64.ld"],
    }),
    additional_linker_inputs = select({
        "@platforms//cpu:aarch64": ["kernel.aarch64.ld"],
        "@platforms//cpu:x86_64": ["kernel.x86_64.ld"],
    }),
    linkstatic = True,
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    deps = [
        "//kernel/core:kernel_core",
        "//kernel/platform:kernel_platform",
    ],
)
