[workspace]
members = [
    "api/init",
    "core",
    "entry",
    "hal",
    "platform",
    "syscalls",
]
resolver = "2"

[workspace.dependencies]
init_contract_rust = { path = "api/init" }
kernel_core = { path = "core" }
kernel_hal = { path = "hal" }
kernel_bindings_gen = { path = "platform" }
syscalls_rust = { path = "syscalls" }

# 3rd party dependencies
bitflags = { version = "=2.11.0" }
eclipse_framebuffer = { version = "=0.1.0" }
limine = { version = "=0.5.0" }
nom = { version = "8.0.0", default-features = false, features = ["alloc"] }
