genrule(
    name = "img",
    srcs = [
        "//image/pkg",
    ],
    outs = ["aether.img"],
    cmd = """
    dd if=/dev/zero of=$@ bs=1M count=64
    mformat -i $@ ::
    rm -rf staging/
    mkdir -p staging/
    tar -xf $(location //image/pkg) -C staging/
    mcopy -i $@ -s staging/* ::
    """,
    target_compatible_with = [
        "@platforms//cpu:aarch64",
    ],
    visibility = ["//visibility:public"],
)
