load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("//:transitions.bzl", "platform_binary_wrapper")

platform_binary_wrapper(
    name = "hello_world",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
    target = "//hello_world",
)

platform_binary_wrapper(
    name = "init",
    platform = select({
        "@platforms//cpu:x86_64": "//platforms:user_x86_64",
        "@platforms//cpu:aarch64": "//platforms:user_aarch64",
    }),
    target = "//init",
    visibility = ["//image/pkg:__subpackages__"],
)

pkg_tar(
    name = "initrd",
    srcs = [
        ":hello_world",
        ":init",
    ],
    out = "initrd.tar",
    mode = "0644",
    visibility = ["//image/pkg:__subpackages__"],
)
