[package]
name = "kernel_core"
edition = "2024"

[dependencies]
init_contract_rust = { path = "../api/init" }
syscalls_rust = { path = "../api/syscalls" }
kernel_bindings_gen = { path = "../platform" }
kernel_hal = { path = "../hal" }

eclipse_framebuffer = "0.1.0"
nom = { version = "8.0.0", features = ["alloc"], default-features = false }
thiserror-no-std = { version = "2.0", features = [] }
