load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "kernel_entry",
    binary_name = "kernel",
    srcs = glob([
        "src/**/*.rs",
    ]),
    edition = "2024",
    linker_script = select({
        "@platforms//cpu:aarch64": "kernel.aarch64.ld",
        "@platforms//cpu:x86_64": "kernel.x86_64.ld",
    }),
    rustc_flags = [
        "-C", "link-arg=-nostdlib",
        "-C", "link-arg=-static",
        "-C", "link-arg=-zmax-page-size=0x1000",
        "-C", "link-arg=--no-dynamic-linker",
        "-C", "link-arg=--gc-sections",
        "-C", "relocation-model=static",
        "-C", "target-feature=-reserve-x18",
    ],
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/platform:kernel_platform",
        "//kernel/core:kernel_core",
        "//kernel/core:kernel_bindings_gen",
        "//3rdparty/crates:limine",
    ],
)
