load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_rust//rust:defs.bzl", "rust_library")
load("@rules_rust_bindgen//:defs.bzl", "rust_bindgen_library")

rust_library(
    name = "kernel_hal",
    srcs = glob([
        "src/**/*.rs",
    ]),
    edition = "2024",
    target_compatible_with = ["@//platforms:kernel_mode"] + select({
        "@platforms//cpu:aarch64": [
            "@platforms//cpu:aarch64",
            "@platforms//os:uefi",
        ],
        "@platforms//cpu:x86_64": [
            "@platforms//cpu:x86_64",
            "@platforms//os:none",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//kernel/core:kernel_bindings_gen",
        "@crates//:bitflags",
    ],
)
